--- a/rpg.html
+++ b/rpg.html
@@ -36,7 +36,7 @@ body { background-image: url('assets/images/ff7.jpg')}
 </div>
 
 <script
-src="http://code.jquery.com/jquery-3.3.1.js"
+src="https://code.jquery.com/jquery-3.3.1.js"
 integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
 crossorigin="anonymous"></script>
 
