--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
 <title>FF7 RPG</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <style>
-.fader { opacity : 0.4;}
+.fadeOut { opacity : 0.4;}
 body { background-image: url('assets/images/ff7.jpg')}
 * { color: white }
 </style>
-<audio controls autoplay id="music">
+<audio id="music" controls autoplay>
 <source src="assets/images/battle.mp3" type="audio/ogg" type="audio/mpeg">
 </audio>
-
 </head>
-
+`
 <body>
   
 
@@ -40,14 +39,13 @@ body { background-image: url('assets/images/ff7.jpg')}
 <script>
 
 $(document).ready ( function() {
+
 var chosenHero
 var chosenEnemy
 var isHeroChosen
 var isEnemyChosen
 var isHeroAlive
 var isEnemyAlive
-
-audio = $("<audio>").attr("prelude","auto");
 
 function initGame () {
 isHeroChosen =false
@@ -67,12 +65,12 @@ $(document).on("click",".myChar", function() {
 if (isHeroChosen === false) {
 chosenHero = charArr[$(this).attr("value")]
 console.log(chosenHero)
-$(this).addClass("fader")
+$(this).addClass("fadeOut", 500)
 isHeroChosen = true
 myHeroThing = $("<div id='" +
 chosenHero.name +"'><img src='" +
-chosenHero.image+"'style='width:400px;height:630px;'/><p>" +
-chosenHero.name+"</p><h4>HP</h4><p id='heroHP'>"+chosenHero.hp +
+chosenHero.image+"'style='width:410px;height:630px;'/><p>" +
+chosenHero.name+"</p><h6>HP</h6><p id='heroHP'>"+chosenHero.hp +
 "</p></div>")
 $("#myHero").html(myHeroThing)
 
@@ -82,13 +80,13 @@ chosenHero.name != charArr[$(this).attr("value")
 ].name) {
 chosenEnemy = charArr[$(this).attr("value")]
 console.log(chosenEnemy)
-$(this).addClass("fader")
+$(this).addClass("fadeOut", 500)
 isEnemyChosen = true
-$("#characters").hide()
+$("#characters").hide(600)
 myEnemyThing = $("<div id='" +
 chosenEnemy.name + "'><img src='" +
-chosenEnemy.image + "'style='width:400px;height:630px;'/> <p>" +
-chosenEnemy.name + "</p><h4>HP</h4><p id='enemyHP'>"+chosenEnemy.hp +
+chosenEnemy.image + "'style='width:410px;height:630px;'/> <p>" +
+chosenEnemy.name + "</p><h6>HP</h6><p id='enemyHP'>"+chosenEnemy.hp +
 "</p></div>")
 $("#myEnemy").html(myEnemyThing)
 }
@@ -137,44 +135,26 @@ else if ( isEnemyAlive && !isHeroAlive) {
 
 }
 }
-// in progress...... LOL
-// for(var i = 0; i < audioArr.length; i++) {
-//     $("#music").attr("src", audioArr).append(music);
-//     audio[0].load();
-// }
 
-// var audioArr = [
-//     {
-//     name: "victory",
-//     audio:"assets/images.victory.mp3"
-//     },
-//     {
-//     name: "fight",
-//     audio:"assets/images.fight.mp3"    
-//     },
-//     {
-//     name: "lose",
-//     audio:"assets/images.heart.mp3"
-//     },  
-//     ]
-// name, hp, strength, image
+
+// // name, hp, strength, image
 var charArr = [
 {
 name: "Sephiroth",
-hp:100,
-strength:20,
+hp: 150,
+strength: 20,
 image:"assets/images/sephiroth.png"
 },
 {
 name: "Cloud",
 hp: 100,
-strength:20,
+strength: 20,
 image:"assets/images/cloud.png"
 },
 {
 name: "Aerith",
-hp: 99,
-strength: 13,
+hp: 85,
+strength: 12,
 image:"assets/images/aerith.png"
 },
 {
@@ -185,14 +165,14 @@ image:"assets/images/tifa.png"
 },
 {
 name: "Vincent",
-hp:100,
-strength:20,
+hp: 100,
+strength: 20,
 image:"assets/images/vincent.png"
 },
 {
-name: "Barret ",
+name: "Barret",
 hp: 100,
-strength:20,
+strength: 20,
 image:"assets/images/Barret.png"
 },
 ]
