add live link to readme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- controlbox for the audio -->
-    <audio id="music" controls autoplay>
+    <audio controls autoplay id="music">
         <source src="assets/images/battle.mp3" type="audio/ogg" type="audio/mpeg">
         </audio>
 
